# InfiniTAM

./: .gitignore  README.md
InfiniTAM/: CMakeLists.txt  InfiniTAM.cpp
InfiniTAM/Engine/: CMakeLists.txt  IMUSourceEngine.h  Kinect2Engine.cpp  Kinect2Engine.h  OdometrySourceEngine.cpp  OdometrySourceEngine.h  ROSBagSourceEngine.cpp  ROSBagSourceEngine.h  ROSIMUSourceEngine.cpp  ROSIMUSourceEngine.h  ROSImageSourceEngine.cpp  ROSImageSourceEngine.h  ROSOdometrySourceEngine.cpp  ROSOdometrySourceEngine.h  RealsenseEngine.cpp  RealsenseEngine.h  UIEngine.cpp  UIEngine.h  VISensorEngine.cpp  VISensorEngine.h  VISensorIMUSourceEngine.cpp  VISensorIMUSourceEngine.h
InfiniTAM/Files/Kinect2/: calib.txt  calib_offline.txt  calib_optitrack.txt  calib_rovio.txt
InfiniTAM/Files/Realsense_R200/: calib.txt  calib_optitrack.txt  calib_rovio_karer.txt
InfiniTAM/ITMLib/: CMakeLists.txt  ITMLib.h
InfiniTAM/ITMLib/Engine/: ITMColorTracker.cpp  ITMColorTracker.h  ITMDenseMapper.cpp  ITMDenseMapper.h  ITMDepthTracker.cpp  ITMDepthTracker.h  ITMIMUCalibrator.h  ITMIMUTracker.cpp  ITMLoopClosureDetection.cpp  ITMLoopClosureDetection.h  ITMMainEngine.cpp  ITMMainEngine.h  ITMOdometryTracker.cpp  ITMOdometryTracker.h  ITMPoseGraphEngine.h  ITMSceneReconstructionEngine.h  ITMSwappingEngine.h  ITMTrackerFactory.h  ITMTrackingController.cpp  ITMTrackingController.h  ITMViewBuilder.h  ITMVisualisationEngine.cpp  ITMVisualisationEngine.h
InfiniTAM/ITMLib/Engine/DeviceAgnostic/: ITMDepthTracker.h  ITMRepresentationAccess.h  ITMSceneReconstructionEngine.h  ITMSwappingEngine.h  ITMViewBuilder.h  ITMVisualisationEngine.h
InfiniTAM/ITMLib/Engine/DeviceSpecific/CPU/: ITMColorTracker_CPU.cpp  ITMColorTracker_CPU.h  ITMDepthTracker_CPU.cpp  ITMDepthTracker_CPU.h  ITMLoopClosureDetection_CPU.cpp  ITMLoopClosureDetection_CPU.h  ITMSceneReconstructionEngine_CPU.cpp  ITMSceneReconstructionEngine_CPU.h  ITMSwappingEngine_CPU.cpp  ITMSwappingEngine_CPU.h  ITMViewBuilder_CPU.cpp  ITMViewBuilder_CPU.h  ITMVisualisationEngine_CPU.cpp  ITMVisualisationEngine_CPU.h
InfiniTAM/ITMLib/Engine/DeviceSpecific/CUDA/: ITMColorTracker_CUDA.cu  ITMColorTracker_CUDA.h  ITMDepthTracker_CUDA.cu  ITMDepthTracker_CUDA.h  ITMLoopClosureDetection_CUDA.cu  ITMLoopClosureDetection_CUDA.h  ITMSceneReconstructionEngine_CUDA.cu  ITMSceneReconstructionEngine_CUDA.h  ITMSwappingEngine_CUDA.cu  ITMSwappingEngine_CUDA.h  ITMViewBuilder_CUDA.cu  ITMViewBuilder_CUDA.h  ITMVisualisationEngine_CUDA.cu  ITMVisualisationEngine_CUDA.h
InfiniTAM/ITMLib/Objects/: ITMOdometryMeasurement.h  ITMPointCloud.h  ITMRGBDCalib.h  ITMRenderState.h  ITMRenderState_VH.h  ITMTrackingState.h  ITMView.h  ITMViewIMU.h  ITMViewOdometry.h
InfiniTAM/ITMLib/Utils/: ITMCalibIO.cpp  ITMLibDefines.h  ITMLibSettings.cpp  ITMLibSettings.h  ITMMath.h
InfiniTAM/ORUtils/: Matrix.h
InfiniTAM/Utils/: NVTimer.h
InfiniTAM/cmake/: CUDACheckCompute.cmake
Plotting Tools/: MocapInfo.m  ReadData.m  T_check.mat  VioInfo.m  covarianceEllipse1D.m  covarianceEllipse2D.m  covarianceEllipse3D.m  itmPlotTracking.m  my_inv.m  optimize_inertial_alignment.m  optimize_inertial_alignment_fun.m  trivia
